Archive2/47/22b188c803dfda/output
main.cpp: In function 'int main()':
main.cpp:4:23: error: 'printf' was not declared in this scope
       printf("plop!\n");
                       ^
main.cpp:5:12: error: 'fork' was not declared in this scope
       fork();
            ^
main.cpp:7:22: error: 'printf' was not declared in this scope
      printf("plop!\n");
                      ^
main.cpp:8:12: error: 'exit' was not declared in this scope
      exit(0);
            ^
